# Liminatr

./: .gitignore  README.md  pyproject.toml
src/: cli.py  processor.py  utils.py
tests/: test_processor.py  test_utils.py  testconfig.py
