[project]
name = "liminatr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "pycodestyle>=2.14.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = ["tests"]
pythonpath = ["src"]
